sandbox/output
AnagramTest.java:22: error: cannot find symbol
        assertEquals(ture,anagram.generate("ab").contains("ab"));
                     ^
  symbol:   variable ture
  location: class AnagramTest
AnagramTest.java:23: error: cannot find symbol
       assertEquals(ture,anagram.generate("ab").contains("ba"));
                    ^
  symbol:   variable ture
  location: class AnagramTest
2 errors
